code modified: need to troubleshoot session creation issue

--- a/breeze-proxy/Dockerfile
+++ b/breeze-proxy/Dockerfile
@@ -17,4 +17,4 @@ COPY breeze_proxy_app.py .
 EXPOSE 8080
 
 # Run the application
-CMD ["gunicorn", "--bind", "0.0.0.0:8080", "--workers", "1", "breeze_proxy_app:app"]
+CMD ["gunicorn", "--bind", "0.0.0.0:${PORT}", "--workers", "1", "--worker-class", "eventlet", "breeze_proxy_app:app"]
