--- a/breeze-proxy/requirements.txt
+++ b/breeze-proxy/requirements.txt
@@ -4,3 +4,8 @@ breeze_connect
 google-cloud-secret-manager
 requests
 gunicorn
+python-dotenv
+Flask-SocketIO
+eventlet
+python-engineio
+python-socketio
