--- a/frontend/package.json
+++ b/frontend/package.json
@@ -8,9 +8,11 @@
     "build": "tsc -b && vite build",
     "lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
     "preview": "vite preview",
-    "start": "vite"
+    "start": "vite --host 0.0.0.0 --port 8082"
   },
   "dependencies": {
+    "@google/genai": "^1.39.0",
+    "@google/generative-ai": "^0.24.1",
     "@supabase/supabase-js": "^2.41.1",
     "clsx": "^2.1.1",
     "lightweight-charts": "^5.1.0",
@@ -18,8 +20,8 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.22.3",
-    "tailwind-merge": "^3.4.0",
-    "socket.io-client": "^4.7.5"
+    "socket.io-client": "^4.8.3",
+    "tailwind-merge": "^3.4.0"
   },
   "devDependencies": {
     "@types/react": "^18.2.64",
