Real-time feed added

--- a/breeze-proxy/Dockerfile
+++ b/breeze-proxy/Dockerfile
@@ -13,8 +13,9 @@ RUN pip install --no-cache-dir -r requirements.txt
 # Copy the application code into the container
 COPY breeze_proxy_app.py .
 
+
 # Document the port that Cloud Run will use
 EXPOSE 8080
 
 # Run the application
-CMD ["gunicorn", "--bind", "0.0.0.0:${PORT}", "--workers", "1", "--worker-class", "eventlet", "breeze_proxy_app:app"]
+CMD gunicorn --bind 0.0.0.0:$PORT --workers 1 --worker-class eventlet breeze_proxy_app:app
